add reference route to documentation
