# src/schemas/comms/responses/reference.js
@@ -1,0 +1,35 @@
+import Joi from 'joi'
+
+const successModel = Joi.object({
+  data: Joi.array().items(
+    Joi.object({
+      correlationId: Joi.string().guid({ version: 'uuidv4' }).required(),
+      events: Joi.array().items(
+        Joi.object({
+          id: Joi.string().guid({ version: 'uuidv4' }).required(),
+          source: Joi.string().required(),
+          specversion: Joi.string().required(),
+          type: Joi.string().required(),
+          datacontenttype: Joi.string().required(),
+          time: Joi.date().required(),
+          data: Joi.object({
+            correlationId: Joi.string().uuid().optional(),
+            crn: Joi.string().optional(),
+            sbi: Joi.string().optional(),
+            sourceSystem: Joi.string().optional(),
+            notifyTemplateId: Joi.string().uuid().optional(),
+            commsType: Joi.string().optional(),
+            recipient: Joi.string().email(),
+            personalisation: Joi.object({}).optional().label('Personalisation'),
+            reference: Joi.string().optional(),
+            statusDetails: Joi.object({}).optional().label('Status Details'),
+            oneClickUnsubscribeUrl: Joi.string().uri().optional(),
+            emailReplyToId: Joi.string().uuid().optional()
+          }).required().label('Event Payload')
+        }).label('Cloud Event')
+      ).required().label('Events')
+    }).label('Comms Notification')
+  ).required().label('Notifications List')
+}).label('Get By Reference Response')
+
+export { successModel }
